@@ -1,5 +1,6 @@
 Domibus 4.1.4
-- Remove unecessary jmx looping when looking up destination in weblogic jms manager
+- Added JMS message property 'finalRecipientType', which is required to send JMS message in Dynamic discovery for SMP lookup.
+- Remove unnecessary jmx looping when looking up destination in weblogic jms manager
 Domibus 4.1.3
 - Remove unnecessary RMI port usage from ActiveMQ on Tomcat
 - Fixed payload encryption at start up of WebLogic cluster
